crates/oxc_css_parser/tests/error/selectors/missing-an-plus-b.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: invalid An+B syntax
  ┌─ missing-an-plus-b.css:1:13
  │
1 │ a:nth-child() {
  │             ^


